tests/bad/methods_redef.ae
/// fail: Method with this name already exists

struct Foo {}
def Foo::bar(this) {}
def Foo::bar(this) {}